# cote

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
analysis/: README.md  setup_py_venv.sh
analysis/all-params/: README.md  generate_3d_scatter_plots.py  generate_3d_scatter_plots.sh  generate_constellation_state_pie_chart.py  generate_constellation_state_pie_charts.sh
analysis/all-params/3d-scatter-charts/: README.md
analysis/all-params/state-pie-charts/: README.md
artifacts/: README.md
artifacts/bent-pipe/: README.md
artifacts/bent-pipe/scripts/: README.md  populate_gnd_ring.py  prep_bent_pipe_scenarios.sh  run_bent_pipe_scenarios.sh
artifacts/bent-pipe/source/: CMakeLists.txt  bent-pipe.cpp
artifacts/close-spaced/: README.md
artifacts/close-spaced/scripts/: prep_close_spaced_scenarios.sh  run_close_spaced_scenarios.sh
artifacts/close-spaced/source/: CMakeLists.txt  close-spaced.cpp
artifacts/frame-spaced/: README.md
artifacts/frame-spaced/configuration/: README.md
artifacts/frame-spaced/scripts/: populate_gnd_ring.py  prep_frame_spaced_scenarios.sh  run_frame_spaced_scenarios.sh
artifacts/frame-spaced/source/: CMakeLists.txt  frame-spaced.cpp
dependencies/parse-json-0.1.0/: CHANGELOG.md  CONTRIBUTING.md  README.md
dependencies/parse-json-0.1.0/examples/: README.md
dependencies/parse-json-0.1.0/examples/constellation/source/: CMakeLists.txt  test-parse-constellation.cpp
dependencies/parse-json-0.1.0/media/: README.md
dependencies/parse-json-0.1.0/scripts/: README.md  setup_dependencies_mac.sh
dependencies/parse-json-0.1.0/software/: README.md
dependencies/parse-json-0.1.0/software/array/test/: CMakeLists.txt  test-array.cpp
dependencies/parse-json-0.1.0/software/bool/test/: CMakeLists.txt  test-bool.cpp
dependencies/parse-json-0.1.0/software/nul/test/: CMakeLists.txt  test-nul.cpp
dependencies/parse-json-0.1.0/software/number/test/: CMakeLists.txt  test-number.cpp
dependencies/parse-json-0.1.0/software/object/test/: CMakeLists.txt  test-object.cpp
dependencies/parse-json-0.1.0/software/type/test/: CMakeLists.txt  test-type.cpp
dependencies/parse-json-0.1.0/software/utilities/test/: CMakeLists.txt  test-utilities.cpp
examples/: README.md
examples/all-params/: README.md
examples/all-params/scripts/: setup_sample_configuration_files.sh
examples/all-params/source/: CMakeLists.txt  all-params.cpp
examples/bent-pipe/: README.md
examples/bent-pipe/scripts/: prep_bent_pipe_scenarios.sh  run_bent_pipe_scenarios.sh
examples/bent-pipe/source/: CMakeLists.txt  bent-pipe.cpp
examples/capture-and-downlink/: README.md
examples/capture-and-downlink/scripts/: README.md  setup_sample_configuration_files.sh
examples/capture-and-downlink/source/: CMakeLists.txt  capture-and-downlink.cpp
examples/close-spaced/: README.md
examples/close-spaced/scripts/: README.md  populate_rx.py  populate_tx.py  prep_close_spaced_scenarios.sh  run_close_spaced_scenarios.sh
examples/close-spaced/source/: CMakeLists.txt  close-spaced.cpp
examples/crosslink-los/: README.md
examples/crosslink-los/logs/: README.md
examples/crosslink-los/scripts/: clean_crosslink_los.sh  generate_date_time_file.py  generate_sat_files.py  (+1 more)
examples/crosslink-los/source/: CMakeLists.txt  crosslink-los.cpp
examples/dynamic-tiling/: README.md
examples/dynamic-tiling/source/: CMakeLists.txt  dynamic-tiling.cpp
examples/frame-spaced/: README.md
examples/generate-coms/: README.md
examples/generate-constellation-configuration/: README.md
examples/generate-constellation-tracks/: README.md
examples/generate-deadlines/: README.md
examples/generate-ecis/: README.md
examples/generate-gnds/: README.md
examples/generate-ground-tracks/: README.md
examples/generate-irradiance-trace/: README.md
examples/generate-links/: README.md
examples/generate-links/source/: CMakeLists.txt  generate-links.cpp
examples/generate-sat-azel/: README.md
examples/generate-sun-azel/: README.md
examples/generate-sun-azel/source/: CMakeLists.txt  generate-sun-azel.cpp
examples/generate-voltage-trace/: README.md
examples/generate-voltage-trace/source/: CMakeLists.txt  generate-voltage-trace.cpp
images/: README.md
references/: README.md
scripts/: README.md  generate_polar_norad_ids.py  generate_step_config_files.py  setup_dependencies.sh  setup_dependencies_mac.sh
scripts/gen-config/: generate_adacs_sm_sat_files.py  generate_camera_sm_sat_files.py  generate_capacitor_files.py  generate_capacitor_sat_files.py  generate_computer_sm_sat_files.py  generate_gnd_files.py  generate_num_steps_file.py  generate_orbit_spaced_sat_files.py  generate_program_sat_files.py  generate_rx_gnd_files.py  generate_rx_sat_files.py  generate_rx_sm_sat_files.py  generate_sensor_sat_files.py  generate_solar_array_files.py  generate_solar_array_sat_files.py  generate_tx_gnd_files.py  generate_tx_sat_files.py  generate_tx_sm_sat_files.py
software/: README.md
software/capacitor/: README.md
software/capacitor/test/: CMakeLists.txt  test-capacitor.cpp
software/channel/: README.md
software/constants/: README.md
software/date-time/: README.md
software/date-time/test/: CMakeLists.txt  test-date-time.cpp
software/ground-station/: README.md
software/ground-station/test/: CMakeLists.txt  test-ground-station.cpp
software/isim/: README.md
software/log/: README.md
software/log-level/: README.md
software/log/test/: CMakeLists.txt  test-log.cpp
software/receiver/: README.md
software/receiver/test/: CMakeLists.txt  test-receiver.cpp
software/satellite/: README.md
software/sensor/: README.md
software/solar-array/: README.md
software/state-machine/: README.md
software/state-machine/test/: CMakeLists.txt  test-state-machine.cpp
software/state-transition/: README.md
software/state-transition/test/: CMakeLists.txt  test-state-transition.cpp
software/transmitter/: README.md
software/transmitter/test/: CMakeLists.txt  test-transmitter.cpp
software/utilities/: README.md
software/utilities/test/: CMakeLists.txt  test-utilities.cpp
(+1213 files in other folders)
